fix: Separate build and migration steps for Railway
- Remove migration from build script (build only generates Prisma Client)
- Add automatic migration on server startup in production
- Create initial database migration files
- Add Railway environment variables example
- Build will succeed without DATABASE_URL
- Migrations run after server starts when DATABASE_URL is available

This fixes the Railway build error where DATABASE_URL was not available during build time.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "prisma generate && prisma migrate deploy"
+    "build": "prisma generate",
+    "migrate": "prisma migrate deploy"
   },
   "engines": {
     "node": ">=18.0.0"
